:sparkles: :bug: 增加删除小班功能，修复添加小班功能的展示错误

--- a/templates/data.html
+++ b/templates/data.html
@@ -218,7 +218,7 @@
       let content =  '<div class="start">';
       for (let i in observe_groups) {
         let group = observe_groups[i];
-        content += ' <line><a href="../group/'+group.id+'">'+group.name+'</a>'
+        content += ' <line><a href="group/'+group.id+'">'+group.name+'</a>'
         if (group.daily_record) {
           content += '<b class="float-right">已开启</b>';
         } else {
