--- a/templates/filter_test.html
+++ b/templates/filter_test.html
@@ -263,7 +263,9 @@
             </div>
             <div class="card">
                 <div class="frame" id="operations">
-                    <div class="center-tag button">返回</div>
+                    <div class="center-tag button" id="back">返回</div>
+                    <div class="center-tag button" id="history">历史通知</div>
+                    <div class="center-tag button" id="settings" onclick="showSettings()">设置</div>
                     <!-- 动态添加其他操作项 -->
                 </div>
             </div>
