--- a/templates/setting.html
+++ b/templates/setting.html
@@ -38,8 +38,52 @@
         </div>
         <div class="wall-container">
           <span class="loading-text">
-            暂未开放
+            <div class="loader">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+            数据获取中, 请稍后...
           </span>
+          <div class="container hide">
+            <div class="setting-group">
+              <div class="input">
+                <label for="cache_second_input">数据缓存时长</label>
+                <input id="cache_second_input" type="number" />
+              </div>
+              <span class="setting-desc">在[数据查询]页面查询时, 本程序会对今日数据进行一次查询, 为减少不必要的请求对源数据服务器造成负担, 设置数据缓存时长（单位：秒）, 只有经过该时间后才会进行新一轮的数据查询</span>
+
+              <div class="input">
+                <label for="daily_record_input">记录定时任务</label>
+                <input id="daily_record_input" type="text" />
+              </div>
+              <span class="setting-desc">即每日定时保存数据的时间, 默认为“59 23 * * *”, 即每晚23点59分保存数据, 具体语法请参考[Crontab]</span>
+              <div class="input">
+                <label for="main_token_input">主授权令牌</label>
+                <input id="main_token_input" type="text" />
+              </div>
+              <span class="setting-desc"><strong>非常重要!</strong> 本程序用以获取所有基础数据的授权令牌，建议不应加入任何小班</span>
+              <div class="input">
+                <label for="output_file_input">下载文件名</label>
+                <input id="output_file_input" type="text" />
+              </div>
+              <span class="setting-desc">在[数据查询]页面查询得到结果后,点击下载获取的表格文件的文件名</span>
+              <div class="btn-group">
+                <div id="save_btn" class="btn" onclick="saveConfig()">保存</div>
+              </div>
+            </div>
+            <div class="disclaimer">
+              <h1>免责声明</h1>
+<p>感谢您选择使用本小班数据管理器。在使用本程序之前, 请您<strong>仔细阅读</strong>并理解以下免责声明内容：
+
+1. 本程序仅供个人学习、研究和其他非商业性质的合法用途, 任何因违反相关法律法规或侵犯他人权益所导致的法律责任, 由用户自行承担。
+2. 用户在使用本程序时, 应遵守所在国家或地区的法律法规, 并对使用该程序产生的一切后果负全部责任。
+3. 本程序对于用户使用过程中可能产生的各种风险（包括但不限于被数据来源公司的封禁、用户自身合规问题等）不承担任何责任。
+4. 用户违反本声明或者滥用本程序进行非法活动的, 数据来源公司将有权追究您的法律责任。
+5. 本软件作者对用户使用本软件产生的一切纠纷、损失或伤害不承担任何责任。
+6. 一旦用户开始使用本程序, 则视为用户已充分理解并同意本免责声明的全部内容, 如果您无法接受上述条款, 请<strong>立即停止</strong>使用本软件。</p>
+            </div>
+          </div>
         </div>
       </div>
       <div class="footer">
@@ -59,14 +103,107 @@
   </body>
   <script src="lib/script.js"></script>
   <script>
+    let cache_second_input = document.querySelector('#cache_second_input');
+    let daily_record_input = document.querySelector('#daily_record_input');
+    let main_token_input = document.querySelector('#main_token_input');
+    let output_file_input = document.querySelector('#output_file_input');
+    let past_cache_second = "";
+    let past_daily_record = "";
+    let past_main_token = "";
+    let past_output_file = "";
     onload = ()=>{
       initCloud(10);
-      document.querySelectorAll('.wall-container').forEach((e)=>{
-        e.addEventListener('click', ()=>{
-          notify('暂未开启此功能');
-        })
+      getConfig()
+      .then((result)=>{
+        if (!result) return;
+        document.querySelectorAll('.loading-text').forEach((e)=>{
+          e.classList.add('hide');
+        });
+        document.querySelectorAll('.container').forEach((e)=>{
+          e.classList.remove('hide');
+        });
       });
     }
 
-  </script>
+    // 获取配置
+    function getConfig() {
+      return fetch('../configure')
+      .then(response => response.json())
+      .then(data => {
+        if (data.retcode != 0) {
+          notify(data.msg);
+          return;
+        }
+        past_cache_second = data.data.cache_second;
+        cache_second_input.value = past_cache_second;
+        past_daily_record = data.data.daily_record;
+        daily_record_input.value = past_daily_record;
+        past_main_token = data.data.main_token;
+        main_token_input.value = past_main_token;
+        past_output_file = data.data.output_file;
+        output_file_input.value = past_output_file;
+        return true;
+      })
+      .catch(error => {
+        console.error('请求错误:', error);
+        notify('请求错误:' + error);
+      });
+    }
+
+    // 修改配置
+    function saveConfig() {
+      showModal('确保设置无误？该操作不可逆', '修改配置', ()=>{
+        if (past_main_token != main_token_input.value) {
+          showModal('此次操作修改了授权令牌，请确认无误', '', ()=>{
+            postConfig();
+          })
+        } else {
+          postConfig();
+        }
+      })
+    }
+
+    // 发送修改配置请求
+    function postConfig() {
+      let payload = {};
+      let cache_second = cache_second_input.value;
+      let daily_record = daily_record_input.value;
+      let main_token = main_token_input.value;
+      let output_file = output_file_input.value;
+      if (past_cache_second != cache_second) {
+        payload.cache_second = cache_second;
+        past_cache_second = cache_second;
+      }
+      if (past_daily_record != daily_record) {
+        payload.daily_record = daily_record;
+        past_daily_record = daily_record;
+      }
+      if (past_main_token != main_token) {
+        payload.main_token = main_token;
+        past_main_token = main_token;
+      }
+      if (past_output_file != output_file) {
+        payload.output_file = output_file;
+        past_output_file = output_file;
+      }
+      return fetch('../configure', {
+        method: 'POST',
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify(payload)
+      })
+      .then(response => response.json())
+      .then(data => {
+        notify(data.msg);
+        if (data.retcode != 0) {
+          return;
+        }
+        return true;
+      })
+      .catch(error => {
+        console.error('请求错误:', error);
+        notify('请求错误:' + error);
+      });
+    }
+
+</script>
 </html>
