:bug: 修复未正确请求的配置路径

--- a/templates/setting.html
+++ b/templates/setting.html
@@ -80,8 +80,8 @@
 2. 用户在使用本程序时, 应遵守所在国家或地区的法律法规, 并对使用该程序产生的一切后果负全部责任。
 3. 本程序对于用户使用过程中可能产生的各种风险（包括但不限于被数据来源公司的封禁、用户自身合规问题等）不承担任何责任。
 4. 用户违反本声明或者滥用本程序进行非法活动的, 数据来源公司将有权追究您的法律责任。
-5. 本软件作者对用户使用本软件产生的一切纠纷、损失或伤害不承担任何责任。
-6. 一旦用户开始使用本程序, 则视为用户已充分理解并同意本免责声明的全部内容, 如果您无法接受上述条款, 请<strong>立即停止</strong>使用本软件。</p>
+5. 本程序作者对用户使用本程序产生的一切纠纷、损失或伤害不承担任何责任。
+6. 一旦用户开始使用本程序, 则视为用户已充分理解并同意本免责声明的全部内容, 如果您无法接受上述条款, 请<strong>立即停止</strong>使用本程序。</p>
             </div>
           </div>
         </div>
@@ -127,7 +127,7 @@
 
     // 获取配置
     function getConfig() {
-      return fetch('../configure')
+      return fetch('configure')
       .then(response => response.json())
       .then(data => {
         if (data.retcode != 0) {
