--- a/static/lib/style.css
+++ b/static/lib/style.css
@@ -1095,7 +1095,8 @@ table.simple-table td {
   display: block;
   margin: 0.2rem;
 }
-.member-extra {
+.member-extra,
+.group-extra {
   display: flex;
   position: absolute;
   right: 0.5rem;
