--- a/templates/setting.html
+++ b/templates/setting.html
@@ -62,7 +62,7 @@
                 <label for="main_token_input">主授权令牌</label>
                 <input id="main_token_input" type="text" />
               </div>
-              <span class="setting-desc"><strong>非常重要!</strong> 本程序用以获取所有基础数据的授权令牌，建议不应加入任何小班</span>
+              <span class="setting-desc"><strong>非常重要!</strong> 本程序用以获取所有基础数据的授权令牌，建议该用户不应加入任何小班</span>
               <div class="input">
                 <label for="output_file_input">下载文件名</label>
                 <input id="output_file_input" type="text" />
