--- a/templates/details.html
+++ b/templates/details.html
@@ -20,7 +20,20 @@
               <label for="week_select">周数</label>
               <select id="week_select" onkeyup="eventSearch(event)"></select>
             </div>
-            <div class="input">
+            <div class="input wrap-input">
+              <label for="display_left">展示已离开成员</label>
+              <div id="display_left" class="btn-group">
+                <div class="checkbox">
+                  <input type="radio" id="display_left_true" name="display_left" value="true" checked />
+                  <label for="display_left_true">是</label>
+                </div>
+                <div class="checkbox">
+                  <input type="radio" id="display_left_false" name="display_left" value="false" />
+                  <label for="display_left_false">否</label>
+                </div>
+              </div>
+            </div>
+            <div class="input wrap-input">
               <label for="display_type">展示类型</label>
               <div id="display_type" class="btn-group">
                 <div class="checkbox">
@@ -34,6 +47,10 @@
                 <div class="checkbox">
                   <input type="checkbox" id="display_absence" checked />
                   <label for="display_absence">缺卡</label>
+                </div>
+                <div class="checkbox">
+                  <input type="checkbox" id="display_unfinished" checked />
+                  <label for="display_unfinished">未打卡</label>
                 </div>
                 <div class="checkbox">
                   <input type="checkbox" id="display_all" />
@@ -71,7 +88,7 @@
         </footer>
       </div>
     </main>
-    <div class="left-corner-btn btn" onclick="backToHome()">回主页</div>
+    <div class="left-corner-btn btn" onclick="history.back()">回主页</div>
     <div id="setting_modal" class="modal hide" data-status="hidden" onclick="toggleSettingModal(event)">
       <div class="modal-content">
         <span class="modal-close-btn" onclick="toggleSettingModal()"></span>
@@ -125,11 +142,6 @@
         }
       });
       bindScrollToTopBtn(document.querySelector('.member-info-container'));
-    }
-
-    // 返回主页
-    function backToHome() {
-      window.location.href = '../';
     }
 
     // 打开关闭公告模态框
@@ -294,7 +306,7 @@
               <span>人数`+group.member_count+`/`+group.count_limit+`, 完成率`
                 + Math.round(group.finishing_rate * 100)+`%, `
                 + (group.member_count - group.today_daka_count) +`人未打卡</span>
-              <span>本周总打卡数: `+group.total_times+`/`+week_count_limit+`, `
+              <span>当前周总打卡数: `+group.total_times+`/`+week_count_limit+`, `
                 + (group.absence_times) +`人缺卡, `
                 + group.late_times +`人晚卡</span>
               <span>`+group.introduction+`</span>
@@ -330,18 +342,25 @@
         let member = group.members[i];
         let group_nickname_span = '';
         let badges = '';
+        let display_left = document.querySelector('input[name="display_left"]:checked').value;
         if (member.group_nickname) {
           group_nickname_span += '<span>' + member.group_nickname + '</span>';
         }
-        if (group.week == current_week && member.completed_time == ''
-            && document.getElementById('display_absence').checked) {
+        if (!member.data_time && display_left == 'true') {
+          badges += '<span class="badge border">已离开</span>';
+        } else if (!member.data_time && display_left == 'false') {
+          continue;
+        }
+        if (member.data_time && group.week == current_week && member.completed_time == ''
+            && document.getElementById('display_unfinished').checked) {
           badges += '<span class="badge blue-border">' + '今日未打卡' + '</span>';
-        } else if (group.week == current_week && group.late_daka_time != ''
+        } else if (member.data_time && group.week == current_week && group.late_daka_time != ''
                    && member.completed_time > group.late_daka_time 
                    && document.getElementById('display_late').checked) {
           badges += '<span class="badge purple-border">' + '今日晚卡' + '</span>';
         }
-        if (member.today_study_cheat == '是' && document.getElementById('display_cheat').checked) {
+        if (group.week == current_week && member.today_study_cheat == '是'
+            && document.getElementById('display_cheat').checked) {
           badges += '<span class="badge red-border">今日作弊</span>';
         }
         if (member.late && document.getElementById('display_late').checked) {
@@ -358,7 +377,7 @@
             <img src="`+member.avatar+`" />
           </div>
           <div class="member-info">
-            <span>`+member.nickname+`</span>
+            <span>`+member.nickname+` (`+member.completed_times+`/`+member.duration_days+`)</span>
             <span>`+member.id+`</span>
             `+group_nickname_span+`
           </div>
@@ -370,16 +389,22 @@
         member_table.className = 'info-table member-table';
         member_table.innerHTML = member_content;
         let modal_content = '打卡记录为空';
-        if (member.daka.length != 0) {
+        if (Object.keys(member.daka).length != 0) {
           modal_content = '<table class="simple-table"><tr><th>日期</th><th>打卡时间</th><th>单词数</th></tr>';
           for (let date in member.daka) {
             let daka_time = member.daka[date].time ? member.daka[date].time : '未打卡';
             let today_word_count = member.daka[date].count;
             modal_content += '<tr><td>'+date+'</td><td>'+daka_time+'</td><td>'+today_word_count+'</td></tr>';
           }
-          let daka_time = member.completed_time ? member.completed_time : '未打卡';
-          modal_content += '<tr><td>'+member.today_date+'</td><td>'+daka_time+'</td><td>'+member.today_word_count+'</td></tr>';
+          if (member.data_time && group.week == current_week) {
+            let daka_time = member.completed_time ? member.completed_time : '未打卡';
+            modal_content += '<tr><td>'+member.today_date+'</td><td>'+daka_time+'</td><td>'+member.today_word_count+'</td></tr>';
+          } else if (!member.data_time) {
+            modal_content += '<tr><td></td><td>已离开</td><td></td></tr>';
+          }
           modal_content += '</table>';
+        } else if (!member.data_time) {
+          continue;
         }
         member_table.onclick = () => {
           showModal(modal_content, '打卡详情');
