:art: 增加晚于记录时间打卡校验，晚于记录时间也可以准确获取打卡状态

--- a/templates/data.html
+++ b/templates/data.html
@@ -213,7 +213,7 @@
 
     // 展示关注小班
     function show_observe_groups() {
-      let content =  '<div class="start">';
+      let content =  '<div class="start scroll-auto">';
       for (let i in observe_groups) {
         let group = observe_groups[i];
         content += ' <line><a href="group/'+group.id+'">'+group.name+'</a>'
