--- a/templates/details.html
+++ b/templates/details.html
@@ -88,7 +88,7 @@
         </footer>
       </div>
     </main>
-    <div class="left-corner-btn btn" onclick="history.back()">回主页</div>
+    <div class="left-corner-btn btn" onclick="history.back()">返回</div>
     <div id="setting_modal" class="modal hide" data-status="hidden" onclick="toggleSettingModal(event)">
       <div class="modal-content">
         <span class="modal-close-btn" onclick="toggleSettingModal()"></span>
