--- a/templates/setting.html
+++ b/templates/setting.html
@@ -76,7 +76,7 @@
               <h1>免责声明</h1>
 <p>感谢您选择使用本小班数据管理器。在使用本程序之前, 请您<strong>仔细阅读</strong>并理解以下免责声明内容：
 
-1. 本程序仅供个人学习、研究和其他非商业性质的合法用途, 任何因违反相关法律法规或侵犯他人权益所导致的法律责任, 由用户自行承担。
+1. 本程序基于[GPLv3]开源，仅供个人学习、研究和其他非商业性质的合法用途, 任何因违反相关法律法规或侵犯他人权益所导致的法律责任, 由用户自行承担。
 2. 用户在使用本程序时, 应遵守所在国家或地区的法律法规, 并对使用该程序产生的一切后果负全部责任。
 3. 本程序对于用户使用过程中可能产生的各种风险（包括但不限于被数据来源公司的封禁、用户自身合规问题等）不承担任何责任。
 4. 用户违反本声明或者滥用本程序进行非法活动的, 数据来源公司将有权追究您的法律责任。
