:art: 修正部分描述和命名

--- a/templates/data.html
+++ b/templates/data.html
@@ -31,7 +31,7 @@
         <div class="eaves">
           <div class="gloss"></div>
           <div class="eaves-container">
-            <a href="group">我的小班</a>
+            <a href="group">小班列表</a>
             <a class="active">数据查询</a>
             <a href="setting">系统设置</a>
           </div>
