:zap: 优化网络请求为异步

--- a/templates/group.html
+++ b/templates/group.html
@@ -255,6 +255,7 @@
               </div>
               <div class="group-info">
                 <span>`+group.name+`</span>
+                <span>小班ID: `+group.id+`</span>
               </div>
               <div class="group-detail">
                 <span>人数`+group.member_count+`/`+group.count_limit+`, 完成率`+Math.round(group.finishing_rate * 100)+`%</span>
