--- a/static/lib/style.css
+++ b/static/lib/style.css
@@ -862,7 +862,7 @@ table.simple-table td {
   width: 90%;
   height: 0%;
   border: solid 0.1rem;
-  padding: 0.5rem;
+  padding: 0 0.5rem;
   margin: 0.5rem auto -0.1rem auto;
   background: var(--white);
   border-radius: 0.5rem 0.5rem 0 0;
@@ -1561,7 +1561,7 @@ table.simple-table td {
 .footer::before {
   content: '';
   position: absolute;
-  top: 0;
+  top: -0.1rem;
   width: calc(100% - 0.2rem);
   height: 0.5rem;
   background: rgb(255, 206, 132);
@@ -1607,13 +1607,14 @@ footer{
   max-width: 90%;
   height: 2rem;
   margin: 1rem;
+  padding-left: 0rem;
   opacity: 0;
   visibility: collapse;
   transition: all 0.6s ease-in-out;
 }
 .info>input:checked~div {
-  text-align: end;
-  width: 22rem;
+  width: 20rem;
+  padding-left: 2.5rem;
   opacity: 1;
   visibility: visible;
 }
