--- a/static/lib/style.css
+++ b/static/lib/style.css
@@ -65,6 +65,7 @@ h1 {
 }
 line {
   display: block;
+  flex-basis: 100%;
 }
 select,
 input:focus-visible {
@@ -158,7 +159,7 @@ img[src=""] {
   filter: grayscale(100%) brightness(50%);
 }
 .invalid::after {
-  content: '无效';
+  content: '失效';
   position: absolute;
   font-weight: bold;
   font-size: 2rem;
